--- a/Languages/Japanese/DefInjected/Rimatomics.ResearchStepDef/Rimatomics_BWeapons.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.ResearchStepDef/Rimatomics_BWeapons.xml
@@ -105,7 +105,7 @@
   <HEL4.description>充電されたPPC電池と武器管制システムのある電力網に繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</HEL4.description>
 
   <HEL5.label>データを集める</HEL5.label>
-  <HEL5.description>データを集めるために飛んでいる砲弾を迎撃しよう。武器管制システムから自分で発射した砲弾も撃ち落とせるように設定できる</HEL5.description>
+  <HEL5.description>飛んでいる砲弾を迎撃してデータを集めよう。 武器管制システムから自分で発射した砲弾も撃ち落とせるように設定できる</HEL5.description>
 
 
   <!-- /////////////////////////////////////////////////////// -->
