--- a/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
@@ -12,7 +12,7 @@
   <ReactorPipeVisibility.options.2.label>常に表示する</ReactorPipeVisibility.options.2.label>
   <ReactorPipeVisibility.options.3.label>常に表示する、地面につなげる</ReactorPipeVisibility.options.3.label>
   
-  <RimatomicsTraderCooldown.label>リムアトミクス貿易船クールダウン</RimatomicsTraderCooldown.label>
+  <RimatomicsTraderCooldown.label>貿易船クールダウン</RimatomicsTraderCooldown.label>
   <RimatomicsTraderCooldown.options.0.label>チート</RimatomicsTraderCooldown.options.0.label>
   <RimatomicsTraderCooldown.options.1.label>2日</RimatomicsTraderCooldown.options.1.label>
   <RimatomicsTraderCooldown.options.2.label>3日</RimatomicsTraderCooldown.options.2.label>
