Cleaned up TranslationReport errors (except for impossible Hediff descriptions)

--- a/Languages/Japanese/DefInjected/HediffDef/Iodine.xml
+++ b/Languages/Japanese/DefInjected/HediffDef/Iodine.xml
@@ -2,6 +2,6 @@
 <LanguageData>
 
   <PotassiumIodide.label>ヨードカリ錠</PotassiumIodide.label>
+  <PotassiumIodide.description>内部被曝を予防している</PotassiumIodide.description>
 
-  <!--TODO: Check in-game description-->
 </LanguageData>
